Covrage: add controller unit test with 1 service